--- a/pvg/css/style.css
+++ b/pvg/css/style.css
@@ -190,7 +190,7 @@ body {
 }
 
 #tool-box{
-    width: 30%;
+    width: 300px;
     margin: 0 auto 0 auto;
     border: 1px solid rgb(116, 116, 116);
     border-radius: 2em;
